--- a/folio.html
+++ b/folio.html
@@ -173,7 +173,7 @@
             </div>
             <div class="project-card">
                 <i class="fas fa-code"></i>
-                <h3>Django & Flask Backend</h3>
+                <h3>Web & App Development</h3>
             </div>
             <div class="project-card">
                 <i class="fab fa-node-js"></i>
