--- a/folio.html
+++ b/folio.html
@@ -159,7 +159,8 @@
             <div class="client-logo"><img src=" https://www.fidelitybank.com.gh/images/logo-@2x.png" alt="Fidelity Bank Gh"></div>
             <div class="client-logo"><img src=" https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/Presbyterian_Church_of_Ghana_Crest.png/250px-Presbyterian_Church_of_Ghana_Crest.png
 " alt="Presbytarian Church of Ghana"></div>
-                       
+            <div class="client-logo"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/Accra_tu.png/250px-Accra_tu.png" alt="Accra Technical University"></div>
+           
             <div class="client-logo"><strong>+ Unnamed Clients</strong></div>
         </div>
     </section>
