--- a/folio.html
+++ b/folio.html
@@ -134,7 +134,7 @@
 <body>
     <header>
         <div class="profile-pic">
-            <img src="your-image.jpg" alt="Profile Picture">
+            <img src="https://media.licdn.com/dms/image/v2/D4D03AQGmoUmcZ3PsOA/profile-displayphoto-shrink_200_200/B4DZUEBaZPGkAY-/0/1739529245371?e=1752105600&v=beta&t=La-7lMoY564WRaJr0hRVFu949f6w4d8mYs2_VDJIr4w" alt="Profile Picture">
         </div>
         <div class="header-text">
             <h1>Portfolio</h1>
