--- a/folio.html
+++ b/folio.html
@@ -140,7 +140,7 @@
             <h1>Portfolio</h1>
             <p>Specializing in ML, Backend Development, Telephony & Network Infrastructure</p>
             <div class="github-link">
-                <a href="https://github.com/your-username" target="_blank">
+                <a href="https://github.com/isaac-donkor" target="_blank">
                     <i class="fab fa-github"></i> Visit My GitHub
                 </a>
             </div>
