--- a/folio.html
+++ b/folio.html
@@ -197,20 +197,7 @@
 
     <section>
         <h2>Contact Me</h2>
-        <form class="contact-form">
-            <input type="text" placeholder="Your Name" required>
-            <input type="email" placeholder="Your Email" required>
-            <textarea rows="5" placeholder="Your Message" required></textarea>
-            <button type="submit">Send Message</button>
-        </form>
+       <h3>justinkwakye50@gmail.com</h3>
     </section>
-
-    <script>
-        document.querySelector('form').addEventListener('submit', function(e) {
-            e.preventDefault();
-            alert("Thanks for reaching out! I'll get back to you soon.");
-            this.reset();
-        });
-    </script>
 </body>
 </html>
