--- a/folio.html
+++ b/folio.html
@@ -137,8 +137,7 @@
             <img src="https://media.licdn.com/dms/image/v2/D4D03AQGmoUmcZ3PsOA/profile-displayphoto-shrink_200_200/B4DZUEBaZPGkAY-/0/1739529245371?e=1752105600&v=beta&t=La-7lMoY564WRaJr0hRVFu949f6w4d8mYs2_VDJIr4w" alt="Profile Picture">
         </div>
         <div class="header-text">
-            <h1>Portfolio</h1>
-            <p>Specializing in Data Analysis , ML, Backend Development, Telephony & Network Infrastructure</p>
+            <h1>Isaac Donkor</h1>
             <div class="github-link">
                 <a href="https://github.com/isaac-donkor" target="_blank">
                     <i class="fab fa-github"></i> Visit My GitHub
@@ -187,6 +186,10 @@
             <div class="project-card">
                 <i class="fas fa-network-wired"></i>
                 <h3>Telephony & Networking</h3>
+            </div>
+            <div class="project-card">
+                <i class="fas fa-network-wired"></i>
+                <h3>Logos & Graphic Design</h3>
             </div>
         </div>
     </section>
