--- a/folio.html
+++ b/folio.html
@@ -188,7 +188,7 @@
                 <h3>Telephony & Networking</h3>
             </div>
             <div class="project-card">
-                <i class="fas fa-network-wired"></i>
+                 <i class="fas fa-palette"></i>
                 <h3>Logos & Graphic Design</h3>
             </div>
         </div>
