--- a/folio.html
+++ b/folio.html
@@ -177,12 +177,8 @@
                 <h3>Web & App Development</h3>
             </div>
             <div class="project-card">
-                 <i class="fas fa-microchip"></i>
-                <h3>C++ and C# Solutions</h3>
-            </div>
-            <div class="project-card">
-                <i class="fas fa-file-excel"></i>
-                <h3>VBA Automation</h3>
+                <i class="fas fa-cogs"></i>
+                <h3>Business Process Automation</h3>
             </div>
             <div class="project-card">
                 <i class="fas fa-network-wired"></i>
