--- a/folio.html
+++ b/folio.html
@@ -130,6 +130,16 @@
             }
         }
     </style>
+//<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BY8XFN37K8"></script>
+
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BY8XFN37K8');
+</script>
 </head>
 <body>
     <header>
