--- a/folio.html
+++ b/folio.html
@@ -130,7 +130,7 @@
             }
         }
     </style>
-//<!-- Google tag (gtag.js) -->
+<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-BY8XFN37K8"></script>
 
 <script>
