--- a/folio.html
+++ b/folio.html
@@ -64,7 +64,7 @@
             </div>
             <div class="project-card">
                 <i class="fas fa-code"></i>
-                <h3>Web & App Development</h3>
+                <h3><a href="tech-stack.html" style="color: inherit; text-decoration: none;"></a>Web & App Development</h3>
             </div>
             <div class="project-card">
                 <i class="fas fa-cogs"></i>
