"added several html page to original page" "add a couple of css files"

--- a/tech stack.html
+++ b/tech stack.html
@@ -106,6 +106,12 @@
         <h3>Node.js</h3>
       </div>
     </a>
+    <a href="https://www.mysql.com/" target="_blank" rel="noopener noreferrer">
+        <div  class="stack-card">
+        <i class="fas fa-database"></i>
+        <h3>MySQL</h3>
+    </div>
+    </a>
     <a href="https://www.python.org/" target="_blank" rel="noopener noreferrer">
       <div class="stack-card">
         <i class="fab fa-python"></i>
@@ -124,18 +130,19 @@
         <h3>Django</h3>
       </div>
     </a>
-    <a href="https://www.apachefriends.org/" target="_blank" rel="noopener noreferrer">
-      <div class="stack-card">
-        <i class="fas fa-database"></i>
-        <h3>XAMPP</h3>
-      </div>
+    <a href="https://www.joomla.org/" target="_blank" rel="noopener noreferrer">
+        <div class="stack-card">
+            <i class="fab fa-joomla"></i>
+            <h3>Joomla</h3>
+        </div>
     </a>
-    <a href="https://www.wampserver.com/en/" target="_blank" rel="noopener noreferrer">
-      <div class="stack-card">
-        <i class="fas fa-database"></i>
-        <h3>WAMP</h3>
-      </div>
+    <a href="https://wordpress.org/" target="_blank" rel="noopener noreferrer">
+        <div class="stack-card">
+            <i class="fab fa-wordpress"></i>
+            <h3>WordPress</h3>
+        </div>
     </a>
+
     <a href="https://httpd.apache.org/" target="_blank" rel="noopener noreferrer">
       <div class="stack-card">
         <i class="fas fa-server"></i>
