--- a/folio.html
+++ b/folio.html
@@ -58,22 +58,34 @@
     <section>
         <h2>Project Portfolio</h2>
         <div class="projects">
-            <div class="project-card">
-                <i class="fas fa-brain"></i>
-                <h3>Machine Learning Models</h3>
-            </div>
-            <div class="project-card">
-                <i class="fas fa-code"></i>
-                <h3><a href="tech-stack.html" style="color: inherit; text-decoration: none;"></a>Web & App Development</h3>
-            </div>
+            <a href="models.html" style="text-decoration: none; color: inherit;">
+                <div class="project-card">
+                    <i class="fas fa-brain"></i>
+                    <h3>Machine Learning Models</h3>
+                </div>
+            </a>
+
+            <a href="tech stack.html" style="text-decoration: none; color: inherit;">
+                <div class="project-card">
+                    <i class="fas fa-code"></i>
+                        <h3>Web & App Development</h3>
+                </div>
+            </a>
+
+            <a href="bpa.html" style="text-decoration: none; color: inherit;">
             <div class="project-card">
                 <i class="fas fa-cogs"></i>
                 <h3>Business Process Automation</h3>
             </div>
+            </a>
+
+            <a href="Telephony and Networking.html" style="text-decoration: none; color:inherit">
             <div class="project-card">
                 <i class="fas fa-network-wired"></i>
                 <h3>Telephony & Networking</h3>
             </div>
+            </a>
+            
             <div class="project-card">
                  <i class="fas fa-palette"></i>
                 <h3>Logos & Graphic Design</h3>
