"add image to title"

--- a/folio.html
+++ b/folio.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IT Assistant Portfolio</title>
+    <link rel="icon" type="image/link" href="https://media.licdn.com/dms/image/v2/D4D0BAQFlVfX0gwWU7A/company-logo_200_200/B4DZYsTRYEHwAI-/0/1744499972125/prometheusinc_logo?e=1752105600&v=beta&t=BWPGWxwh0UThKS-Zd-DOGR5lJXP6u8mk0qI_5h-0X3I">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
