--- a/bpa.html
+++ b/bpa.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Business Process Automation</title>
+    <link rel="icon" type="image/link" href="https://media.licdn.com/dms/image/v2/D4D0BAQFlVfX0gwWU7A/company-logo_200_200/B4DZYsTRYEHwAI-/0/1744499972125/prometheusinc_logo?e=1752105600&v=beta&t=BWPGWxwh0UThKS-Zd-DOGR5lJXP6u8mk0qI_5h-0X3I">
     <link rel="stylesheet" href="bpa and models.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
