--- a/bpa.html
+++ b/bpa.html
@@ -19,7 +19,7 @@
             <li><strong>Invoice Processing:</strong> Python-based OCR and automation scripts integrated with email and Google Sheets.</li>
             <li><strong>Customer Support:</strong> Chatbot and ticketing system powered by Flask backend.</li>
             <li><strong>Workflow Automation:</strong> Automation of approval flows using Zapier and custom Node.js scripts.</li>
-            <li><strong>Data Reporting:</strong> Scheduled reporting with visualization via Plotly Dash.</li>
+            <li><strong>Data Reporting:</strong> Scheduled reporting with visualization via Pandas, Redash, Excel and Tableau</li>
         </ul>
     </section>
     <footer>
