Add Data Analysis section to portfolio
Updated project portfolio section to include a new Data Analysis & Visualizations project link.

--- a/folio.html
+++ b/folio.html
@@ -72,6 +72,13 @@
                 </div>
             </a>
 
+            <a href="data-analysis.html" style="text-decoration: none; color: inherit;">
+                <div class="project-card">
+                    <i class="fas fa-chart-bar"></i>
+                    <h3>Data Analysis & Visualizations</h3>
+                </div>
+            </a>
+            
             <a href="tech stack.html" style="text-decoration: none; color: inherit;">
                 <div class="project-card">
                     <i class="fas fa-code"></i>
@@ -106,3 +113,4 @@
     
 </body>
 </html>
+
