Added data analysis page

--- a/data analysis.html
+++ b/data analysis.html
@@ -1,1 +1,55 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Data Analysis & Visualizations - Portfolio</title>
+    <link rel="icon" type="image/link" href="https://media.licdn.com/dms/image/v2/D4D0BAQFlVfX0gwWU7A/company-logo_200_200/B4DZYsTRYEHwAI-/0/1744499972125/prometheusinc_logo?e=1752105600&v=beta&t=BWPGWxwh0UThKS-Zd-DOGR5lJXP6u8mk0qI_5h-0X3I">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    
+    <link rel="stylesheet" href="folio.css"> 
+</head>
+<body>
+
+    <header>
+        <div class="profile-pic">
+            <img src="https://media.licdn.com/dms/image/v2/D4D03AQGmoUmcZ3PsOA/profile-displayphoto-shrink_200_200/B4DZUEBaZPGkAY-/0/1739529245371?e=1752105600&v=beta&t=La-7lMoY564WRaJr0hRVFu949f6w4d8mYs2_VDJIr4w" alt="Profile Picture">
+        </div>
+        <div class="header-text">
+            <h1>Data Analysis & Visualizations</h1>
+            <p><strong>Isaac Donkor</strong> - Extracting Insights from Complex Data</p>
+        </div>
+    </header>
+
+    <section class="data-header">
+        <p>This section showcases my ability to **clean, process, analyze, and visualize data** to drive informed business decisions. I leverage Python, SQL, and advanced visualization tools to transform raw data into actionable insights.</p>
+    </section>
+
+    <section>
+        <div class="project-grid">
+
+            <div class="data-project-card">
+                <h3><i class="fas fa-chart-line"></i> Sales Performance Dashboard</h3>
+                <p>Designed and deployed an interactive dashboard to track key sales metrics across various regions. Identified underperforming product lines and provided recommendations that led to a <strong>15% increase in targeted campaign efficiency</strong>.</p>
+                <div class="tools-used">
+                    Tools: <span>Power BI</span> <span>SQL</span> <span>Excel</span>
+                </div>
+                <div class="project-links">
+                    <a href="#" target="_blank"><i class="fas fa-eye"></i> View Live Demo (Link Placeholder)</a>
+                    <a href="https://github.com/isaac-donkor" target="_blank"><i class="fab fa-github"></i> GitHub Repo</a>
+                </div>
+            </div>
+
+            <div class="data-project-card">
+                <h3><i class="fas fa-users"></i> Customer Churn Analysis</h3>
+                <p>Performed extensive Exploratory Data Analysis (EDA) on telecommunications customer data. Analyzed the relationship between service usage, contract type, and churn rate, isolating the <strong>top three predictors of customer attrition</strong>.</p>
+                <div class="tools-used">
+                    Tools: <span>Python (Pandas, Matplotlib)</span> <span>Jupyter</span> <span>MySQL</span>
+                </div>
+                <div class="project-links">
+                    <a href="#" target="_blank"><i class="fas fa-file-alt"></i> View Report (Link Placeholder)</a>
+                    <a href="https://github.com/isaac-donkor" target="_blank">
