--- a/folio.html
+++ b/folio.html
@@ -72,7 +72,7 @@
                 </div>
             </a>
 
-            <a href="data-analysis.html" style="text-decoration: none; color: inherit;">
+            <a href="data analysis.html" style="text-decoration: none; color: inherit;">
                 <div class="project-card">
                     <i class="fas fa-chart-bar"></i>
                     <h3>Data Analysis & Visualizations</h3>
@@ -113,4 +113,5 @@
     
 </body>
 </html>
+
 
