Add payment support button to contact section
Added a PayPal support button and updated contact information.

--- a/folio.html
+++ b/folio.html
@@ -109,9 +109,19 @@
     <section>
         <h2>Contact Me</h2>
        <h3>justinkwakye50@gmail.com</h3>
+         <a 
+        href="https://www.paypal.me/YOURPAYPALUSERNAME" 
+        target="_blank" 
+        class="paypal-btn"
+        rel="noopener noreferrer"
+    >
+        <i class="fab fa-paypal"></i>
+        Pay / Support via PayPal
+    </a>
     </section>
     
 </body>
 </html>
+
 
 
