--- a/folio.html
+++ b/folio.html
@@ -110,7 +110,7 @@
         <h2>Contact Me</h2>
        <h3>justinkwakye50@gmail.com</h3>
          <a 
-        href="https://www.paypal.me/YOURPAYPALUSERNAME" 
+        href="https://paypal.me/RoknodStudios" 
         target="_blank" 
         class="paypal-btn"
         rel="noopener noreferrer"
@@ -122,6 +122,7 @@
     
 </body>
 </html>
+
 
 
 
