Enhance folio.html with Binance payment section
Added Binance payment option with QR code.

--- a/folio.html
+++ b/folio.html
@@ -118,10 +118,27 @@
         <i class="fab fa-paypal"></i>
         Pay / Support via PayPal
     </a>
+        
+       <div class="binance-pay">
+        <p>Scan the QR code to send payment via Binance</p>
+
+        <!-- Binance QR Image -->
+        <img 
+            src="YOUR_BINANCE_QR_IMAGE_URL_HERE" 
+            alt="Binance Receive Payment QR Code"
+            class="binance-qr"
+        >
+
+        <p class="binance-note">
+            Network: BNB Smart Chain (BEP20)<br>
+            USDT / BNB Accepted
+        </p>
+    </div>
     </section>
     
 </body>
 </html>
+
 
 
 
