Fix HTML formatting and update Binance QR image

--- a/folio.html
+++ b/folio.html
@@ -124,7 +124,7 @@
 
         <!-- Binance QR Image -->
         <img 
-            src="YOUR_BINANCE_QR_IMAGE_URL_HERE" 
+            src="binance.jfif" 
             alt="Binance Receive Payment QR Code"
             class="binance-qr"
         >
@@ -138,6 +138,7 @@
     
 </body>
 </html>
+
 
 
 
