--- a/folio.html
+++ b/folio.html
@@ -109,35 +109,37 @@
     <section>
         <h2>Contact Me</h2>
        <h3>justinkwakye50@gmail.com</h3>
-         <a 
-        href="https://paypal.me/RoknodStudios" 
-        target="_blank" 
-        class="paypal-btn"
-        rel="noopener noreferrer"
-    >
-        <i class="fab fa-paypal"></i>
-        Pay / Support via PayPal
-    </a>
-        
-       <div class="binance-pay">
-        <p>Scan the QR code to send payment via Binance</p>
+         <!-- PAYMENT METHODS -->
+    <div class="payment-methods">
 
-        <!-- Binance QR Image -->
-        <img 
-            src="binance.jfif" 
-            alt="Binance Receive Payment QR Code"
-            class="binance-qr"
+        <!-- PAYPAL -->
+        <a 
+            href="https://paypal.me/RoknodStudios"
+            target="_blank"
+            class="paypal-btn"
+            rel="noopener noreferrer"
         >
+            <i class="fab fa-paypal"></i>
+            Pay / Support via PayPal
+        </a>
 
-        <p class="binance-note">
-            Network: BNB Smart Chain (BEP20)<br>
-            USDT / BNB Accepted
-        </p>
+        <!-- BINANCE -->
+        <div class="binance-pay">
+            <p>Scan to pay via Binance</p>
+            <img src="binance.jfif" alt="Binance QR Code">
+            <p class="binance-note">
+                Network: BNB Smart Chain (BEP20)<br>
+                USDT / BNB Accepted
+            </p>
+        </div>
+
     </div>
+
     </section>
     
 </body>
 </html>
+
 
 
 
