Fix HTML structure and remove duplicate content

--- a/folio.html
+++ b/folio.html
@@ -124,13 +124,9 @@
         </a>
 
         <!-- BINANCE -->
-        <div class="binance-pay">
+        <div class="binance-qr-wrapper">
             <p>Scan to pay via Binance</p>
             <img src="binance.jfif" alt="Binance QR Code">
-            <p class="binance-note">
-                Network: BNB Smart Chain (BEP20)<br>
-                USDT / BNB Accepted
-            </p>
         </div>
 
     </div>
@@ -139,6 +135,7 @@
     
 </body>
 </html>
+
 
 
 
